--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,20 @@
 version: '3.5'
 services:
   terminalserver:
-    build: ./
-    image: danielguerra/ubuntu-xrdp
-    container_name: uxrdp
-    hostname: terminalserver
+    image: thyarles/xrdp-ride:18.04
+    container_name: xrdp
+    hostname: www.businesswebbing.com
     restart: always
     shm_size: 1g
     environment:
        PASSWORDHASH: $$1$$z53Cg/fV$$06o379IvIOxj/ESruVKrG1
        IDLETIME: 11
     ports:
-      - "3389:3389"
-      - "2222:22"
+      - "8022:3389"
+    #  - "2222:22"
     volumes:
-      - ssh:/etc/ssh/
-      - /home/:/home/
+    #  - ssh:/etc/ssh/
+      - /home/rdp/:/home/
 
-volumes:
-  ssh:
+#volumes:
+#  ssh:
